--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Login.cshtml
@@ -18,9 +18,9 @@
 
                 <div class="row g-3">
                     <div class="col-md-12">
-                        <label asp-for="Input.UserName" class="form-label"></label>
-                        <input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" />
-                        <span asp-validation-for="Input.UserName" class="text-danger">
+                        <label asp-for="Input.Email" class="form-label"></label>
+                        <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" />
+                        <span asp-validation-for="Input.Email" class="text-danger">
                         </span>
                     </div>
                 </div>
