--- a/Police_CaseHelper/Views/Cases/Details.cshtml
+++ b/Police_CaseHelper/Views/Cases/Details.cshtml
@@ -4,123 +4,179 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="col-md-12 row">
+    @*Case ID*@
+    <h1>Case @Html.DisplayFor(model => model.CaseID)</h1>
+    <h3>
+        <b>@Html.DisplayNameFor(model => model.CourtDates)</b>:
+        @Html.DisplayFor(model => model.CourtDates), @Html.DisplayFor(model => model.CourtLocation)
+    </h3>
+    <hr/>
+    
+    @*Officer In Charge Details*@
+    <div class="col-md-12 row">
+        <h4>Officer in Charge Details</h4>
+        @*Name*@
+        <div class="col-md-4">
+            <p>
+                <b>@Html.DisplayNameFor(model => model.OfficerInChargeName)</b>
+                <br/>
+                @Html.DisplayFor(model => model.OfficerInChargeName)
+            </p>
+        </div>
+        @*Phone Number*@
+        <div class="col-md-4">
+            <p>
+                <b>@Html.DisplayNameFor(model => model.OfficerInChargePhone)</b>
+                <br />
+                @Html.DisplayFor(model => model.OfficerInChargePhone)
+            </p>
+        </div>
+        @*Email*@
+        <div class="col-md-4">
+            <p>
+                <b>@Html.DisplayNameFor(model => model.OfficerInChargeEmail)</b>
+                <br />
+                @Html.DisplayFor(model => model.OfficerInChargeEmail)
+            </p>
+        </div>
+    </div>
 
-<div>
-    <h4>Cases</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VictimName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VictimName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OffenderName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OffenderName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Charges)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Charges)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OffenderPlea)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OffenderPlea)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OffenderInCustody)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OffenderInCustody)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OffenderReleaseDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OffenderReleaseDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourtDates)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourtDates)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourtLocation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourtLocation)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Details)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Details)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Bail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Bail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BailConditions)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BailConditions)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BailBreached)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BailBreached)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RequiredToBeArrested)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RequiredToBeArrested)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.WantedToArrest)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.WantedToArrest)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OfficerInChargeName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OfficerInChargeName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OfficerInChargeEmail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OfficerInChargeEmail)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OfficerInChargePhone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OfficerInChargePhone)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.VictimUserName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VictimUserName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.CaseID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @*Case Details*@
+    <div class="col-md-12 row">
+        <br/>
+        <h4>Case Details</h4>
+        @*Offender Name, In Custody, Release Date*@
+        <div class="col-md-12 row">
+            @*Offender Name*@
+            <div class="col-md-4">
+                <p>
+                    <b>@Html.DisplayNameFor(model => model.OffenderName)</b>
+                    <br />
+                    @Html.DisplayFor(model => model.OffenderName)
+                </p>
+            </div>
+            @*In Custody*@
+            <div class="col-md-4">
+                <p>
+                    <b>@Html.DisplayNameFor(model => model.OffenderInCustody)</b>
+                    <br />
+                    @Html.DisplayFor(model => model.OffenderInCustody)
+                </p>
+            </div>
+
+            @*Release Date*@
+            @*Only display if Offender in custody == true*@
+            @if(Model.OffenderInCustody)
+            {
+                <div class="col-md-4">
+                    <p>
+                        <b>@Html.DisplayNameFor(model => model.OffenderReleaseDate)</b>
+                        <br />
+                        @Html.DisplayFor(model => model.OffenderReleaseDate)
+                    </p>
+                </div>
+            }
+        </div>
+
+        @*Charges, Offender Plea, Victim Name*@
+        <div class="col-md-12 row">
+            @*Charges*@
+            <div class="col-md-4">
+                <p>
+                    <b>@Html.DisplayNameFor(model => model.Charges)</b>
+                    <br />
+                    @Html.DisplayFor(model => model.Charges)
+                </p>
+            </div>
+            @*Offender Plea*@
+            <div class="col-md-4">
+                <p>
+                    <b>@Html.DisplayNameFor(model => model.OffenderPlea)</b>
+                    <br />
+                    @Html.DisplayFor(model => model.OffenderPlea)
+                </p>
+            </div>
+            @*Victim Name*@
+            <div class="col-md-4">
+                <p>
+                    <b>@Html.DisplayNameFor(model => model.VictimName)</b>
+                    <br />
+                    @Html.DisplayFor(model => model.VictimName)
+                </p>
+            </div>
+        </div>
+
+        @*Bail, Bail Conditions, Bail Breached, Required  To Be Arrested, Wanted To Arrest*@
+        <div class="col-md-12 row">
+            @*Bail*@
+            <div class="col-md-4">
+                <p>
+                    <b>@Html.DisplayNameFor(model => model.Bail)</b>
+                    <br />
+                    @Html.DisplayFor(model => model.Bail)
+                </p>
+            </div>
+            @*Bail Conditions*@
+            @*Only display if Bail is true*@
+            @if (Model.Bail)
+            {
+                <div class="col-md-8">
+                    <p>
+                        <b>@Html.DisplayNameFor(model => model.BailConditions)</b>
+                        <br />
+                        @Html.DisplayFor(model => model.BailConditions)
+                    </p>
+                </div>
+            }
+
+            @*Only display this if Bail is true*@
+            @if (Model.Bail)
+            {
+                @*Bail Breached*@
+                <div class="col-md-4">
+                    <p>
+                        <b>@Html.DisplayNameFor(model => model.BailBreached)</b>
+                        <br />
+                        @Html.DisplayFor(model => model.BailBreached)
+                    </p>
+                </div>
+            }
+           
+            
+            @*Only display this if OffenderInCustody is false*@
+            @if(Model.OffenderInCustody == false)
+            {
+                @*Required To Be Arrested*@
+                <div class="col-md-4">
+                    <p>
+                        <b>@Html.DisplayNameFor(model => model.RequiredToBeArrested)</b>
+                        <br />
+                        @Html.DisplayFor(model => model.RequiredToBeArrested)
+                    </p>
+                </div>
+
+                @*Wanted To Arrest*@
+                <div class="col-md-4">
+                    <p>
+                        <b>@Html.DisplayNameFor(model => model.WantedToArrest)</b>
+                        <br />
+                        @Html.DisplayFor(model => model.WantedToArrest)
+                    </p>
+                </div>
+            }
+            
+            
+        </div>
+        
+
+        @*Case Details*@
+        <div class="col-md-12">
+            <p>
+                <b>@Html.DisplayNameFor(model => model.Details)</b>
+                <br />
+                @Html.DisplayFor(model => model.Details)
+            </p>
+        </div>
+    </div>
 </div>
