Dropdown menu now works to display list of current cases based on a username (this is not dynamic yet and is hard coded)

--- a/Police_CaseHelper/Views/Shared/_Layout.cshtml
+++ b/Police_CaseHelper/Views/Shared/_Layout.cshtml
@@ -1,40 +1,141 @@
-﻿<!DOCTYPE html>
+﻿@using Police_CaseHelper.Areas.Identity.Data
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Police_CaseHelper</title>
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
+     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> 
+    @* <link rel="stylesheet" href="~/Police_CaseHelper.styles.css" asp-append-version="true" /> *@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Police_CaseHelper.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <div class="container">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">University Grades</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <!-- Dashboard -->
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Dashboard</a>
+                        </li>
+                        <!-- Assessment Schedule -->
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Assessment Schedule</a>
+                        </li>
+                        <!-- Courses -->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="Index">Courses</a>
+                        </li>
+                        <!-- Enrolments -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Enrolments
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                @foreach (var item in DatabaseManager.GetUserCases)
+                                {
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="CourseEnrolment" asp-action="Details" asp-route-id="@item.CaseID">@item.CaseID Enrolments</a>
+                                }
+
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CourseEnrolment" asp-action="Index">All Enrolments</a>
+                            </div>
+                        </li>
+                        <!-- Degree Planner -->
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="DegreePlanner" asp-action="Index">Degree Planner</a>
+                        </li>
+                        <!-- Configuration -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Configuration
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AssessmentType" asp-action="Index">Assessment Type</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ClassType" asp-action="Index">Class Type</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CompletionStatus" asp-action="Index">Completion Status</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DayOfWeek" asp-action="Index">Day of Week</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Grade" asp-action="Index">Grade</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Trimester" asp-action="Index">Trimester</a>
+                            </div>
+                        </li>
+                        <!-- Restore -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Restore
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AssessmentType" asp-action="History">Assessment Type</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ClassType" asp-action="History">Class Type</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CompletionStatus" asp-action="History">Completion Status</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DayOfWeek" asp-action="History">Day of Week</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Grade" asp-action="History">Grade</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Trimester" asp-action="History">Trimester</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="History">Course</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CourseEnrolment" asp-action="History">Course Enrolment</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Assessment" asp-action="History">Assessment</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Timetable" asp-action="History">Timetable</a>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </nav>
+        
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Police_CaseHelper</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                    <ul class="navbar-nav mr-auto">
+                        @* List of all cases - Admin only only have access - Users wont see this*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cases" asp-action="Index">Cases</a>
                         </li>
+                        @foreach (var item in DatabaseManager.GetUserCases)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Cases" asp-action="Details" asp-route-id="@item.CaseID">Case @item.CaseID</a>
+                            </li>
+                        }
+
+
+
+                        @* List of Cases based on the user logged in *@
+                        @* Dropdown not working currently - need to debug as to why *@
+                        <li class="nav-item text-dark dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                My Cases
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                @foreach (var item in DatabaseManager.GetUserCases)
+                                {
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Cases" asp-action="Details" asp-route-id="@item.CaseID">Case @item.CaseID</a>
+                                }
+                            </div>
+                        </li>
+                        
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
-                <partial name="_LoginPartial" />
-            </div>
+                
         </nav>
+
+
     </header>
-    <div class="container">
+    
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -48,6 +149,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @* Need this script for dropdown menus to work *@
+    <script src="~/vendor/bootstrap/bootstrap.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
