--- a/Police_CaseHelper/Views/User/Index.cshtml
+++ b/Police_CaseHelper/Views/User/Index.cshtml
@@ -14,9 +14,9 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Email</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Surname</th>
+                    <th scope="col">Username</th>
                     <th scope="col">Phone Number</th>
                     <th scope="col">Edit</th>
                 </tr>
