Register new user, now under the User Page

--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,16 +1,13 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register new Account";
 }
-
-
 
 <div class="row">
     <div class="col-md-8 offset-2">
         <h1>@ViewData["Title"]</h1>
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -57,6 +54,8 @@
                 </div>
             </div>
             
+            
+            <hr />
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
