--- a/Police_CaseHelper/Views/User/Edit.cshtml
+++ b/Police_CaseHelper/Views/User/Edit.cshtml
@@ -1,58 +1,49 @@
 ﻿@model Police_CaseHelper.Core.ViewModels.EditUserViewModel
+@{
+    ViewData["Title"] = "Edit User";
+}
 
-<main>
-    <div class="py-5 text-center">
-        <h2>Edit User</h2>
-    </div>
-
-    <div class="row g-5">
-        <div class="col-md-7 col-lg-8">
-
-            @using (Html.BeginForm("OnPost", "User"))
-            {
-                @Html.HiddenFor(h => @Model.User.Id)
-                ;
-                <div class="row g-3">
-                    <div class="col-sm-6">
-                        <label asp-for="@Model.User.FirstName" class="form-label"></label>
-                        <input asp-for="@Model.User.FirstName" class="form-control" autocomplete="username" aria-required="true" />
-                        <span asp-validation-for="@Model.User.FirstName" class="text-danger">
-                        </span>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <label asp-for="@Model.User.Surname" class="form-label"></label>
-                        <input asp-for="@Model.User.Surname" class="form-control" autocomplete="username" aria-required="true" />
-                        <span asp-validation-for="@Model.User.Surname" class="text-danger">
-                        </span>
-                    </div>
-
-                    <div class="col-12">
-                        <label asp-for="@Model.User.Email" class="form-label">Username</label>
-                        <div class="input-group has-validation">
-                            <span class="input-group-text"></span>
-                            <input asp-for="@Model.User.Email" class="form-control" autocomplete="username" aria-required="true" />
-                            <span asp-validation-for="@Model.User.Email" class="text-danger">
-                            </span>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <label asp-for="@Model.User.PhoneNumber" class="form-label"></label>
-                        <div class="input-group has-validation">
-                            <span class="input-group-text"></span>
-                            <input asp-for="@Model.User.PhoneNumber" class="form-control" autocomplete="username" aria-required="true" />
-                            <span asp-validation-for="@Model.User.PhoneNumber" class="text-danger">
-                            </span>
-                        </div>
-                    </div>
+<div class="row">
+    <div class="col-md-8 offset-2">
+        <h1>@ViewData["Title"]</h1>
+        <hr/>
+        @using (Html.BeginForm("OnPost", "User"))
+        {
+            @Html.HiddenFor(h => @Model.User.Id);
+            @* First Name, Surname *@
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <label asp-for="@Model.User.FirstName" class="form-label"></label>
+                    <input asp-for="@Model.User.FirstName" class="form-control" autocomplete="first name" aria-required="true" />
+                    <span asp-validation-for="@Model.User.FirstName" class="text-danger"></span>
                 </div>
+                <div class="col-md-6">
+                    <label asp-for="@Model.User.Surname" class="form-label"></label>
+                    <input asp-for="@Model.User.Surname" class="form-control" autocomplete="surname" aria-required="true" />
+                    <span asp-validation-for="@Model.User.Surname" class="text-danger"></span>
+                </div>
+            </div>
 
-                <hr class="my-4">
+            @* Username, Phone Number *@
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <label asp-for="@Model.User.Email" class="form-label"></label>
+                    <input asp-for="@Model.User.Email" class="form-control" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="@Model.User.Email" class="text-danger"></span>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="@Model.User.PhoneNumber" class="form-label"></label>
+                    <input asp-for="@Model.User.PhoneNumber" class="form-control" autocomplete="phone number" aria-required="true" />
+                    <span asp-validation-for="@Model.User.PhoneNumber" class="text-danger"></span>
+                </div>
+            </div>
 
+            <hr/>
+
+            <div class="col-md-12">
+                @* Roles *@
                 <h4 class="mb-3">Roles</h4>
-
                 <div class="my-3">
-
                     @for (int i = 0; i < @Model.Roles.Count(); i++)
                     {
                         <div class="form-check">
@@ -64,12 +55,20 @@
                         </div>
                     }
                 </div>
+            </div>
 
-                <hr class="my-4">
+            <hr />
 
-                <button class="w-100 btn btn-primary btn-lg" type="submit">Save</button>
-            }
-        </div>
+            <button class="w-100 btn btn-primary btn-lg" type="submit">Save</button>
+        }
     </div>
-</main>
+</div>
+
+
+
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
 
