--- a/Police_CaseHelper/Views/User/Index.cshtml
+++ b/Police_CaseHelper/Views/User/Index.cshtml
@@ -4,42 +4,42 @@
 }
 @model ICollection<Police_CaseHelper.Areas.Identity.Data.ApplicationUser>
 
-<h1>Users</h1>
-
-<div class="text-center">
-    <h1 class="display-4">Users</h1>
-    @if (@Model != null && @Model.Any())
-    {
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First Name</th>
-                    <th scope="col">Surname</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">Phone Number</th>
-                    <th scope="col">Edit</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var user in Model)
-                {
+<div class="row">
+    <div class="col-md-8 offset-2">
+        <h1>@ViewData["Title"]</h1>
+        <p>
+            <a id="register" asp-area="Identity" asp-page="/Account/Register">Register new User</a>
+        </p>
+        <hr />
+        @if (@Model != null && @Model.Any())
+        {
+            <table class="table">
+                <thead>
                     <tr>
-                        <th scope="row">@user.Id</th>
-                        <td>@user.FirstName</td>
-                        <td>@user.Surname</td>
-                        <td>@user.Email</td>
-                        <td>@user.PhoneNumber</td>
-                        <td>
-                            <a asp-controller="User" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
-                        </td>
+                        <th hidden scope="col">#</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Surname</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Phone Number</th>
+                        <th scope="col">Edit</th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    }
+                </thead>
+                <tbody>
+                    @foreach (var user in Model)
+                    {
+                        <tr>
+                            <th hidden scope="row">@user.Id</th>
+                            <td>@user.FirstName</td>
+                            <td>@user.Surname</td>
+                            <td>@user.Email</td>
+                            <td>@user.PhoneNumber</td>
+                            <td>
+                                <a asp-controller="User" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+    </div>
 </div>
-
-<div class="text-center">
-</div>
-
