Update Header buttons, changed home button name

--- a/Police_CaseHelper/Views/Shared/_Footer.cshtml
+++ b/Police_CaseHelper/Views/Shared/_Footer.cshtml
@@ -1,6 +1,7 @@
 ﻿@* Place where we maintain everything that is diplayed within the footer *@
-<footer class="border-top footer text-muted">
+<footer class="footer">
     <div class="container">
-        &copy; 2023 - Police Case Helper
+        <hr/>
+        &copy; 2023 - Insight
     </div>
 </footer>
