--- a/Police_CaseHelper/Views/Shared/_ScriptsCSS.cshtml
+++ b/Police_CaseHelper/Views/Shared/_ScriptsCSS.cshtml
@@ -1,5 +1,6 @@
 ﻿@* Place to store all the CSS *@
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
+
 <link rel="stylesheet" href="~/Police_CaseHelper.styles.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
