--- a/Police_CaseHelper/Views/Shared/_Header.cshtml
+++ b/Police_CaseHelper/Views/Shared/_Header.cshtml
@@ -5,8 +5,8 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Police_CaseHelper</a>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-background">
+        <a class="navbar-brand btn-yellow" asp-area="" asp-controller="Home" asp-action="Index">Insight</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,14 +40,14 @@
                     if (User.IsInRole("User"))
                     {
                         @* List of Cases based on the user logged in *@
-                        <li class="nav-item text-dark dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <li class="nav-item text-dark btn-yellow">
+                            <a class="nav-link text-dark dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 My Cases
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <div class="dropdown-menu navbar-background" aria-labelledby="navbarDropdown">
                                 @foreach (var item in DatabaseManager.GetUserCases)
                                 {
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Cases" asp-action="Details" asp-route-id="@item.CaseID">Case @item.CaseID</a>
+                                    <a class="nav-link text-dark btn-yellow" asp-area="" asp-controller="Cases" asp-action="Details" asp-route-id="@item.CaseID">Case @item.CaseID</a>
                                 }
                             </div>
                         </li>
@@ -58,7 +58,7 @@
                 
                 @* Court Processes - Takes the user to an external link on the court process*@
                 <li class="nav-item">
-                    <a class="nav-link text-dark" target="_blank" href="https://www.justice.govt.nz/courts/civil/court-process/">Court Processes</a>
+                    <a class="nav-link text-dark btn-yellow" target="_blank" href="https://www.justice.govt.nz/courts/civil/court-process/">Court Processes</a>
                 </li>
 
             </ul>
