--- a/Police_CaseHelper/Views/Shared/_LoginPartial.cshtml
+++ b/Police_CaseHelper/Views/Shared/_LoginPartial.cshtml
@@ -7,10 +7,10 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {    
-    <li class="nav-item">
+    <li class="nav-item btn-yellow">
             <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserAsync(User).Result.FirstName @UserManager.GetUserAsync(User).Result.Surname!</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item btn-yellow">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
@@ -18,7 +18,7 @@
 }
 else
 {
-    <li class="nav-item">
+    <li class="nav-item btn-yellow">
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
