Changes to navbar (Shadows mainly)

--- a/Police_CaseHelper/Views/Shared/_Header.cshtml
+++ b/Police_CaseHelper/Views/Shared/_Header.cshtml
@@ -6,7 +6,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light navbar-background">
-        <a class="navbar-brand btn-yellow" asp-area="" asp-controller="Home" asp-action="Index">Insight</a>
+        <a class="nav-item navbar-brand btn-yellow" asp-area="" asp-controller="Home" asp-action="Index"><b>Insight</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
