--- a/Police_CaseHelper/Views/Shared/_Header.cshtml
+++ b/Police_CaseHelper/Views/Shared/_Header.cshtml
@@ -6,7 +6,10 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light navbar-background">
+        
         <a class="nav-item navbar-brand btn-yellow" asp-area="" asp-controller="Home" asp-action="Index"><b>Insight</b></a>
+            
+        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,8 +60,8 @@
 
                 
                 @* Court Processes - Takes the user to an external link on the court process*@
-                <li class="nav-item">
-                    <a class="nav-link text-dark btn-yellow" target="_blank" href="https://www.justice.govt.nz/courts/civil/court-process/">Court Processes</a>
+                <li class="nav-item btn-yellow">
+                    <a class="nav-link text-dark" target="_blank" href="https://www.justice.govt.nz/courts/civil/court-process/">Court Processes</a>
                 </li>
 
             </ul>
