Updated index to say Officer Details instead of Name

--- a/Police_CaseHelper/Views/Cases/Index.cshtml
+++ b/Police_CaseHelper/Views/Cases/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Charges)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OfficerInChargeName)
+                Officer Details
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.VictimUserName)
