--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -14,6 +14,7 @@
                 <form id="change-password-form" method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="row g-3">
+                        @* Current Password *@
                         <div class="col-md-12">
                             <label asp-for="Input.OldPassword" class="form-label"></label>
                             <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
@@ -22,6 +23,7 @@
                         </div>
                     </div>
                     <div class="row g-3">
+                        @* New Password *@
                         <div class="col-md-12">
                             <label asp-for="Input.NewPassword" class="form-label"></label>
                             <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
@@ -31,6 +33,7 @@
                     </div>
 
                     <div class="row g-3">
+                        @* Confirm Password *@
                         <div class="col-md-12">
                             <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                             <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
@@ -40,7 +43,7 @@
                     </div>
 
                     <hr />
-
+                    @* Submit Button - Update Password *@
                     <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
                 </form>
             </div>
