--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -13,6 +13,7 @@
                 <form id="email-form" method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="row g-3">
+                        @* Email *@
                         <div class="col-md-12">
                             <label asp-for="Email" class="form-label"></label>
                             <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
@@ -21,6 +22,7 @@
                         </div>
                     </div>
                     <div class="row g-3">
+                        @* New Email *@
                         <div class="col-md-12">
                             <label asp-for="Input.NewEmail" class="form-label"></label>
                             <input asp-for="Input.NewEmail" class="form-control" autocomplete="username" aria-required="true" />
@@ -30,7 +32,7 @@
                     </div>
 
                     <hr/>
-
+                    @* Submit Button - Change Email *@
                     <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary">Change email</button>
                 </form>
             </div>
