--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,7 +14,7 @@
         <section>
             <form id="account" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+                @* Email *@
                 <div class="row g-3">
                     <div class="col-md-12">
                         <label asp-for="Input.Email" class="form-label"></label>
@@ -23,6 +23,7 @@
                         </span>
                     </div>
                 </div>
+                @* Password *@
                 <div class="row g-3">
                     <div class="col-md-12">
                         <label asp-for="Input.Password" class="form-label"></label>
@@ -32,6 +33,7 @@
                     </div>
                 </div>
 
+                @* Remember Me *@
                 <div>
                     <div class="checkbox">
                         <label asp-for="Input.RememberMe" class="form-label">
@@ -40,8 +42,10 @@
                         </label>
                     </div>
                 </div>
+
+                @* Submit button - Login *@
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Login</button>
                 </div>
             </form>
         </section>
