--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -14,6 +14,7 @@
                 <form id="profile-form" method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="row g-3">
+                        @* Username *@
                         <div class="col-md-12">
                             <label asp-for="Username" class="form-label"></label>
                             <input asp-for="Username" class="form-control" autocomplete="username" aria-required="true" />
@@ -22,6 +23,7 @@
                         </div>
                     </div>
                     <div class="row g-3">
+                        @* Phone Number *@
                         <div class="col-md-12">
                             <label asp-for="Input.PhoneNumber" class="form-label"></label>
                             <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="username" aria-required="true" />
@@ -31,7 +33,7 @@
                     </div>
 
                     <hr />
-
+                    @* Submit Button - Save *@
                     <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
                 </form>
             </div>
