--- a/Police_CaseHelper/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Police_CaseHelper/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,13 +11,17 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+            @* First Name, Surname *@
             <div class="row g-3">
+                @* First Name *@
                 <div class="col-md-6">
                     <label asp-for="Input.FirstName" class="form-label"></label>
                     <input asp-for="Input.FirstName" class="form-control" autocomplete="first name" aria-required="true" />
                     <span asp-validation-for="Input.FirstName" class="text-danger">
                     </span>
                 </div>
+
+                @* Surname *@
                 <div class="col-md-6">
                     <label asp-for="Input.Surname" class="form-label"></label>
                     <input asp-for="Input.Surname" class="form-control" autocomplete="surname" aria-required="true" />
@@ -25,13 +29,18 @@
                     </span>
                 </div>
             </div>
+
+            @* Email, Phone Number *@
             <div class="row g-3">
+                @* Email *@
                 <div class="col-md-6">
                     <label asp-for="Input.Email" class="form-label"></label>
                     <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" />
                     <span asp-validation-for="Input.Email" class="text-danger">
                     </span>
                 </div>
+
+                @* Phone Number *@
                 <div class="col-md-6">
                     <label asp-for="Input.PhoneNumber" class="form-label"></label>
                     <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="phone number" aria-required="true" />
@@ -39,13 +48,17 @@
                     </span>
                 </div>
             </div>
+
+            @* Password, Confirm Password *@
             <div class="row g-3">
+                @* Password *@
                 <div class="col-md-6">
                     <label asp-for="Input.Password" class="form-label"></label>
                     <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                     <span asp-validation-for="Input.Password" class="text-danger">
                     </span>
                 </div>
+                @* Confirm Password *@
                 <div class="col-md-6">
                     <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                     <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
@@ -56,6 +69,7 @@
             
             
             <hr />
+            @* Submit Button - Register *@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
