--- a/Police_CaseHelper/Views/Cases/Details.cshtml
+++ b/Police_CaseHelper/Views/Cases/Details.cshtml
@@ -42,6 +42,10 @@
         </div>
     </div>
 
+    <div class="col-md-12">
+        <hr />
+    </div>
+
     @*Case Details*@
     <div class="col-md-12 row">
         <br/>
